syntax = "proto3";

package v2fly.core.app.observatory.command;
option csharp_namespace = "v2fly.Core.App.Observatory.Command";
option go_package = "github.com/robovpn/github.com/robovpn/v2fly_core/app/observatory/command";
option java_package = "com.v2fly.core.app.observatory.command";
option java_multiple_files = true;

import "app/observatory/config.proto";

message GetOutboundStatusRequest {
  string Tag = 1;
}

message GetOutboundStatusResponse {
  v2fly.core.app.observatory.ObservationResult status = 1;
}

service ObservatoryService {
  rpc GetOutboundStatus(GetOutboundStatusRequest)
      returns (GetOutboundStatusResponse) {}
}


message Config {}